logs/dag_id=weather/run_id=scheduled__2023-05-21T09:01:00+00:00/task_id=add_data_in_weather/attempt=2.log
[2023-06-05T17:38:52.269+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather.add_data_in_weather scheduled__2023-05-21T09:01:00+00:00 [queued]>
[2023-06-05T17:38:52.334+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather.add_data_in_weather scheduled__2023-05-21T09:01:00+00:00 [queued]>
[2023-06-05T17:38:52.334+0000] {taskinstance.py:1282} INFO - 
--------------------------------------------------------------------------------
[2023-06-05T17:38:52.334+0000] {taskinstance.py:1283} INFO - Starting attempt 2 of 6
[2023-06-05T17:38:52.334+0000] {taskinstance.py:1284} INFO - 
--------------------------------------------------------------------------------
[2023-06-05T17:38:52.449+0000] {taskinstance.py:1303} INFO - Executing <Task(PostgresOperator): add_data_in_weather> on 2023-05-21 09:01:00+00:00
[2023-06-05T17:38:52.470+0000] {standard_task_runner.py:55} INFO - Started process 11292 to run task
[2023-06-05T17:38:52.479+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'weather', 'add_data_in_weather', 'scheduled__2023-05-21T09:01:00+00:00', '--job-id', '511', '--raw', '--subdir', 'DAGS_FOLDER/weather_DAG.py', '--cfg-path', '/tmp/tmp6ojkk5ae']
[2023-06-05T17:38:52.483+0000] {standard_task_runner.py:83} INFO - Job 511: Subtask add_data_in_weather
[2023-06-05T17:38:52.933+0000] {task_command.py:388} INFO - Running <TaskInstance: weather.add_data_in_weather scheduled__2023-05-21T09:01:00+00:00 [running]> on host 05172cfd5782
[2023-06-05T17:38:53.361+0000] {taskinstance.py:1511} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=fox
AIRFLOW_CTX_DAG_ID=weather
AIRFLOW_CTX_TASK_ID=add_data_in_weather
AIRFLOW_CTX_EXECUTION_DATE=2023-05-21T09:01:00+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-05-21T09:01:00+00:00
[2023-06-05T17:38:53.362+0000] {sql.py:254} INFO - Executing: 
            insert into weather_data (date, current_temperature, feels_like, sky, chance_of_precipitation, wind, 
            pressure, uv_index, humidity, precipitation) values 
            ('None',
            'None',
            'None',
            'None'
            )
            
[2023-06-05T17:38:53.411+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-06-05T17:38:55.010+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-06-05T17:38:55.022+0000] {sql.py:375} INFO - Running statement: 
            insert into weather_data (date, current_temperature, feels_like, sky, chance_of_precipitation, wind, 
            pressure, uv_index, humidity, precipitation) values 
            ('None',
            'None',
            'None',
            'None'
            )
            , parameters: None
[2023-06-05T17:38:55.023+0000] {taskinstance.py:1775} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
LINE 2: ...data (date, current_temperature, feels_like, sky, chance_of_...
                                                             ^

[2023-06-05T17:38:55.044+0000] {taskinstance.py:1326} INFO - Marking task as UP_FOR_RETRY. dag_id=weather, task_id=add_data_in_weather, execution_date=20230521T090100, start_date=20230605T173852, end_date=20230605T173855
[2023-06-05T17:38:55.259+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 511 for task add_data_in_weather (INSERT has more target columns than expressions
LINE 2: ...data (date, current_temperature, feels_like, sky, chance_of_...
                                                             ^
; 11292)
[2023-06-05T17:38:55.303+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-06-05T17:38:55.359+0000] {taskinstance.py:2585} INFO - 0 downstream tasks scheduled from follow-on schedule check
